# websh

./: .gitmodules  Cargo.toml  README.md  compose.yaml  delay.html  host.key  host.key.pub  output.ivf  sus.ps  sus.ps1
bindings/: ControlMsg.ts  ControlMsgBody.ts  ControlResBody.ts  ControlResMsg.ts  DataChannelSettingsMsg.ts  ErrorMsg.ts  StartVideoMsg.ts
signaling-server/: deno.json  main.ts
src/: client.rs  control.rs  main.rs  peer.rs  port.rs  recording.rs  server.rs  shell.rs  signal.rs  state.rs  sus.rs  utils.rs
ssh-wrapper/: package-lock.json  package.json
ssh-wrapper-client/src/: main.ts
ssh-wrapper/src/: main.ts
virtual-display/: CGVirtualDisplayPrivate.h  Cargo.toml  build.rs
virtual-display/src/: lib.rs  macos_impl.rs  windows_impl.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/lib/: connection.ts  state.ts
web/src/lib/components/custom/: connection-card.svelte  init.svelte  shell.svelte  video-item.svelte
web/src/lib/components/site/: header.svelte
web/src/routes/: +layout.svelte  +page.svelte
