[package]
name = "websh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = { git = "https://github.com/webrtc-rs/webrtc.git" } 

tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.11.3"
clap = "3"
hyper = { version = "0.14.27", features = ["full"] }
# signal = { path = "examples/signal" }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
chrono = "0.4.28"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
lazy_static = "1"
rand = "0.8"
memchr = "2.1.1"
base64 = "0.22.1"
portable-pty = "0.8.1"
